syntax = "proto3";

package io.products.channelProductVariant.domain;

option java_outer_classname = "ChannelProductVariantDomain";

message ChannelProductVariantState {
  string channel_product_variant_id = 1;
  string product_id = 2;
  string channel_id = 3;
  string variant_id = 4;
}